--- a/luci-app-openclash/luasrc/view/openclash/status.htm
+++ b/luci-app-openclash/luasrc/view/openclash/status.htm
@@ -839,19 +839,19 @@
           }
           if(rdmdl==13)
           {
-             startlog.innerHTML = '<b><font><%:Tip: It is not recommended to enable IPv6 and related services for routing. Most of the network connection problems reported so far are related to it%></font></b>';
+             startlog.innerHTML = '<b><font><%:Note: It is not recommended to enable IPv6 and related services for routing. Most of the network connection problems reported so far are related to it%></font></b>';
           }
           if(rdmdl==14)
           {
-             startlog.innerHTML = '<b><font><%:Tip: Turning on secure DNS in the browser will cause abnormal shunting, please be careful to turn it off%></font></b>';
+             startlog.innerHTML = '<b><font><%:Note: Turning on secure DNS in the browser will cause abnormal shunting, please be careful to turn it off%></font></b>';
           }
           if(rdmdl==15)
           {
-             startlog.innerHTML = '<b><font><%:Tip: Some software will modify the device HOSTS, which will cause abnormal shunt, please pay attention to check%></font></b>';
+             startlog.innerHTML = '<b><font><%:Note: Some software will modify the device HOSTS, which will cause abnormal shunt, please pay attention to check%></font></b>';
           }
           if(rdmdl==16)
           {
-             startlog.innerHTML = '<b><font><%:Tip: The default proxy routes local traffic, BT, PT download, etc., please use redir mode as much as possible and pay attention to traffic avoidance%></font></b>';
+             startlog.innerHTML = '<b><font><%:Note: The default proxy routes local traffic, BT, PT download, etc., please use redir mode as much as possible and pay attention to traffic avoidance%></font></b>';
           }
        }
 	  }
