--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -166,7 +166,7 @@
          core_tun_cv.innerHTML = "<b style=color:red><%:Unknown%></b>";
       }
       if ( status.coremetacv == "0" ) {
-         core_meta_cv.innerHTML = "<b style=color:red<%:File Not Exist%></b>";
+         core_meta_cv.innerHTML = "<b style=color:red><%:File Not Exist%></b>";
       }
       else if (status.coremetacv != "") {
          core_meta_cv.innerHTML = "<b style=color:green>"+status.coremetacv+"</b>";
