--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -204,7 +204,7 @@
 			   core_meta_lv.innerHTML = "<b style=color:green>"+coremetalvis+"</b>";
 			}
 			else {
-			   core_meta_lv.innerHTML = "<b style=color:=red><%:Unknown%></b>";
+			   core_meta_lv.innerHTML = "<b style=color:red><%:Unknown%></b>";
 			}
 			var oplv = status.oplv;
 			var arr_op = oplv.split(",");
