--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -95,8 +95,8 @@
 </fieldset>
 
 <script type="text/javascript">//<![CDATA[
-  var core_version = document.getElementById('CORE_VERSION');
-  var checktime = document.getElementById('CHECKTIME');
+	var core_version = document.getElementById('CORE_VERSION');
+ 	var checktime = document.getElementById('CHECKTIME');
 	var cpu_model = document.getElementById('CPU_MODEL');
 	var core_cv = document.getElementById('CORE_CV');
 	var core_lv = document.getElementById('CORE_LV');
@@ -121,7 +121,7 @@
 	var remove_core  = document.getElementById('remove_core');
 	var release_branch  = document.getElementById('RELEASE_BRANCH');
 
-  XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update")%>', null, function(x, status) {
+	XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "update_info")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
 		  if ( status.corever != "0" && status.corever != "" ) {
 		     core_version.value = status.corever;
