--- a/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
@@ -4,8 +4,7 @@
 	display: inline-block;
 	white-space: nowrap;
 	font-size: 12px;
-	text-align: left;
-	margin-top: 5px;
+	margin: 0 auto;
 	opacity: 0;
 }
 
@@ -13,8 +12,7 @@
 	display: inline-block;
 	white-space: nowrap;
 	font-size: 12px;
-	margin-top: 5px;
-	text-align: left;
+	margin: 0 auto;
 	-webkit-transition: all 1.5s;  
 	-moz-transition: all 1.5s;  
 	-ms-transition: all 1.5s;  
@@ -40,6 +38,22 @@ var retry_<%=idname%> = 0;
 var s_<%=idname%>;
 sub_info_get_<%=idname%>();
 
+function progressbar_<%=idname%>(v, m, pc, np, f, t) {
+		return String.format(
+			'<div style="width:200px; max-width:500px; position:relative; border:1px solid #999999">' +
+			(pc <= 50 ? '<div style="background-color:#9edd9e; width:%d%%; height:15px">' : (pc > 50 && pc <= 90 ? '<div style="background-color:#ffc7b6; width:%d%%; height:15px">' : '<div style="background-color:#ffb9b9; width:%d%%; height:15px">')) +
+			'<div style="position:absolute; left:0; top:0; text-align:center; width:100%%; color:#000000">' +
+			'<small>%s '+(f ? f : '/')+' %s ' + (np ? "" : '(%d%%)') + '</small>' +
+			'</div>' +
+			'</div>' +
+			'</div>' +
+			'<br/>' +
+			'<div style="text-align:center"><%:Plan Expiration Time%>: ' + 
+			'<span style=color:green>%s</span></div>', pc, v, m, pc, t
+		);
+	};
+
+
 function sub_info_get_<%=idname%>()
 {
 	
@@ -50,7 +64,8 @@ function sub_info_get_<%=idname%>()
 			document.getElementById('<%=idname%>').innerHTML = "<span><%:No Sub Info Found%></span>";
 		}
 		else {
-			document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + save_info.used + "</span> | <span style=color:green>" + save_info.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + save_info.expire + "</span>";
+			//document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + save_info.used + "</span> | <span style=color:green>" + save_info.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + save_info.expire + "</span>";
+			document.getElementById('<%=idname%>').innerHTML = progressbar_<%=idname%>((save_info.used), (save_info.total), (save_info.percent ? save_info.percent : 0), false, false, (save_info.expire));
 		}
 	};
 	
@@ -61,7 +76,8 @@ function sub_info_get_<%=idname%>()
 			retry_<%=idname%> = 0;
 			localStorage.setItem("<%=filename%>",JSON.stringify(status));
 			document.getElementById('<%=idname%>').className = "sub_tab_show";
-			document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + status.used + "</span> | <span style=color:green>" + status.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + status.expire + "</span>";
+			document.getElementById('<%=idname%>').innerHTML = progressbar_<%=idname%>((status.used), (status.total), (status.percent), false, false, (status.expire));
+			//document.getElementById('<%=idname%>').innerHTML = "<%:Plan Traffic%>" + ": " + "<span style=color:green>" + status.used + "</span> | <span style=color:green>" + status.total + "</span> <br/> <%:Plan Expiration Time%>: " + "<span style=color:green>" + status.expire + "</span>";
 		}
 		else if ( x && x.status == 200 && status.sub_info == "No Sub Info Found" ) {
 			retry_<%=idname%> = 0;
