--- a/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
+++ b/luci-app-openclash/luasrc/view/openclash/sub_info_show.htm
@@ -40,16 +40,13 @@ sub_info_get_<%=idname%>();
 
 function progressbar_<%=idname%>(v, m, pc, np, f, t) {
 		return String.format(
-			'<div style="width:200px; max-width:500px; position:relative; border:1px solid #999999">' +
-			(pc <= 50 ? '<div style="background-color:#9edd9e; width:%d%%; height:15px">' : (pc > 50 && pc <= 90 ? '<div style="background-color:#ffc7b6; width:%d%%; height:15px">' : '<div style="background-color:#ffb9b9; width:%d%%; height:15px">')) +
-			'<div style="position:absolute; left:0; top:0; text-align:center; width:100%%; color:#000000">' +
-			'<small>%s '+(f ? f : '/')+' %s ' + (np ? "" : '(%d%%)') + '</small>' +
+			'<div style="width:200px; max-width:500px; position:relative; border:1px solid #999999; border-radius: 6px">' +
+			(pc <= 50 ? '<div style="background-color:#9edd9e; width:%d%%; height:35px; border-radius: 6px">' : (pc > 50 && pc <= 80 ? '<div style="background-color:#fffa9f; width:%d%%; height:35px">' : '<div style="background-color:#ffb9b9; width:%d%%; height:35px">')) +
+			'<div style="position:absolute; left:0; top:0; text-align:center; width:100%%">' +
+			'<small>%s '+(f ? f : '/')+' %s ' + (np ? "" : '(%d%%)') + '<br/>' + '%s</small>' +
 			'</div>' +
 			'</div>' +
-			'</div>' +
-			'<br/>' +
-			'<div style="text-align:center"><%:Plan Expiration Time%>: ' + 
-			'<span style=color:green>%s</span></div>', pc, v, m, pc, t
+			'</div>', pc, v, m, pc, t
 		);
 	};
 
